// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper should click on center button 1`] = `
<DocumentFragment>
  .cache-hlwi41 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1giljfj {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1giljfj[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1giljfj[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1giljfj>.etyrq8m5 {
  fill: #4f0599;
}

.cache-1giljfj:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-1xhqomg {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-1xhqomg.cache-1xhqomg {
  vertical-align: middle;
}

.cache-lwx396 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-lwx396:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-lwx396:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-wiike2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-53uyah {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-53uyah.cache-53uyah {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-hlwi41"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m4 e1kgqxfn0 cache-1giljfj"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-1xhqomg"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-lwx396 etyrq8m3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-wiike2 etyrq8m2"
        name="stepper"
        style="width: 35px;"
        value="10"
      />
    </div>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m4 e1kgqxfn0 cache-1giljfj"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-53uyah"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should click on min button 1`] = `
<DocumentFragment>
  .cache-hlwi41 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1giljfj {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1giljfj[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1giljfj[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1giljfj>.etyrq8m5 {
  fill: #4f0599;
}

.cache-1giljfj:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-1xhqomg {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-1xhqomg.cache-1xhqomg {
  vertical-align: middle;
}

.cache-lwx396 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-lwx396:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-lwx396:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-wiike2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-53uyah {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-53uyah.cache-53uyah {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-hlwi41"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m4 e1kgqxfn0 cache-1giljfj"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-1xhqomg"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-lwx396 etyrq8m3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-wiike2 etyrq8m2"
        name="stepper"
        style="width: 25px;"
        value="8"
      />
    </div>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m4 e1kgqxfn0 cache-1giljfj"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-53uyah"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should click on plus button with a step value 1`] = `
<DocumentFragment>
  .cache-hlwi41 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1giljfj {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1giljfj[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1giljfj[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1giljfj>.etyrq8m5 {
  fill: #4f0599;
}

.cache-1giljfj:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-1xhqomg {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-1xhqomg.cache-1xhqomg {
  vertical-align: middle;
}

.cache-lwx396 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-lwx396:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-lwx396:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-wiike2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-53uyah {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-53uyah.cache-53uyah {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-hlwi41"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m4 e1kgqxfn0 cache-1giljfj"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-1xhqomg"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-lwx396 etyrq8m3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-wiike2 etyrq8m2"
        name="stepper"
        style="width: 35px;"
        value="30"
      />
    </div>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m4 e1kgqxfn0 cache-1giljfj"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-53uyah"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should focus input and modify value 1`] = `
<DocumentFragment>
  .cache-hlwi41 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1giljfj {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1giljfj[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1giljfj[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1giljfj>.etyrq8m5 {
  fill: #4f0599;
}

.cache-1giljfj:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-1xhqomg {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-1xhqomg.cache-1xhqomg {
  vertical-align: middle;
}

.cache-lwx396 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-lwx396:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-lwx396:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-wiike2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-53uyah {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-53uyah.cache-53uyah {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-hlwi41"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m4 e1kgqxfn0 cache-1giljfj"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-1xhqomg"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-lwx396 etyrq8m3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-wiike2 etyrq8m2"
        name="stepper"
        style="width: 35px;"
        type="text"
        value="20"
      />
    </div>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m4 e1kgqxfn0 cache-1giljfj"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-53uyah"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should focus input and modify value onMaxCrossed 1`] = `
<DocumentFragment>
  .cache-hlwi41 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1giljfj {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1giljfj[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1giljfj[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1giljfj>.etyrq8m5 {
  fill: #4f0599;
}

.cache-1giljfj:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-1xhqomg {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-1xhqomg.cache-1xhqomg {
  vertical-align: middle;
}

.cache-lwx396 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-lwx396:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-lwx396:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-wiike2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-unoz5r {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-unoz5r[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-unoz5r[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-unoz5r:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-53uyah {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-53uyah.cache-53uyah {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-hlwi41"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m4 e1kgqxfn0 cache-1giljfj"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-1xhqomg"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-lwx396 etyrq8m3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-wiike2 etyrq8m2"
        name="stepper"
        style="width: 45px;"
        type="text"
        value="100"
      />
    </div>
    <button
      aria-disabled="true"
      aria-label="Plus"
      class="etyrq8m4 e1kgqxfn0 cache-unoz5r"
      disabled=""
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-53uyah"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should focus input and modify value onMinCrossed 1`] = `
<DocumentFragment>
  .cache-hlwi41 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-unoz5r {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-unoz5r[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-unoz5r[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-unoz5r:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-1xhqomg {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-1xhqomg.cache-1xhqomg {
  vertical-align: middle;
}

.cache-lwx396 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-lwx396:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-lwx396:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-wiike2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-1giljfj {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1giljfj[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1giljfj[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1giljfj>.etyrq8m5 {
  fill: #4f0599;
}

.cache-1giljfj:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-53uyah {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-53uyah.cache-53uyah {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-hlwi41"
  >
    <button
      aria-disabled="true"
      aria-label="Minus"
      class="etyrq8m4 e1kgqxfn0 cache-unoz5r"
      disabled=""
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-1xhqomg"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-lwx396 etyrq8m3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-wiike2 etyrq8m2"
        name="stepper"
        style="width: 35px;"
        type="text"
        value="10"
      />
    </div>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m4 e1kgqxfn0 cache-1giljfj"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-53uyah"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should increase and decrease input with arrow up and down 1`] = `
<DocumentFragment>
  .cache-hlwi41 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1giljfj {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1giljfj[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1giljfj[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1giljfj>.etyrq8m5 {
  fill: #4f0599;
}

.cache-1giljfj:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-1xhqomg {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-1xhqomg.cache-1xhqomg {
  vertical-align: middle;
}

.cache-lwx396 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-lwx396:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-lwx396:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-wiike2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-unoz5r {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-unoz5r[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-unoz5r[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-unoz5r:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-53uyah {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-53uyah.cache-53uyah {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-hlwi41"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m4 e1kgqxfn0 cache-1giljfj"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-1xhqomg"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-lwx396 etyrq8m3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-wiike2 etyrq8m2"
        name="stepper"
        style="width: 45px;"
        type="text"
        value="100"
      />
    </div>
    <button
      aria-disabled="true"
      aria-label="Plus"
      class="etyrq8m4 e1kgqxfn0 cache-unoz5r"
      disabled=""
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-53uyah"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should renders correctly 1`] = `
<DocumentFragment>
  .cache-hlwi41 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1giljfj {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1giljfj[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1giljfj[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1giljfj>.etyrq8m5 {
  fill: #4f0599;
}

.cache-1giljfj:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-1xhqomg {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-1xhqomg.cache-1xhqomg {
  vertical-align: middle;
}

.cache-lwx396 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-lwx396:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-lwx396:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-wiike2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-4tml9c {
  color: #4a4f62;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-53uyah {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-53uyah.cache-53uyah {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-hlwi41"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m4 e1kgqxfn0 cache-1giljfj"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-1xhqomg"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-lwx396 etyrq8m3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-wiike2 etyrq8m2"
        name="stepper"
        style="width: 35px;"
        value="10"
      />
      <span
        class="cache-4tml9c etyrq8m1"
      >
        unit
      </span>
    </div>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m4 e1kgqxfn0 cache-1giljfj"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-53uyah"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should renders correctly disabled 1`] = `
<DocumentFragment>
  .cache-1n14rwx {
  background-color: #f6f5f7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1n14rwx>.etyrq8m4,
.cache-1n14rwx .etyrq8m2,
.cache-1n14rwx .etyrq8m3 {
  background-color: #f6f5f7;
  border: none;
  color: #b2b6c3;
  opacity: 1;
  cursor: not-allowed;
}

.cache-unoz5r {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-unoz5r[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-unoz5r[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-unoz5r:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-1xhqomg {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-1xhqomg.cache-1xhqomg {
  vertical-align: middle;
}

.cache-lwx396 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-lwx396:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-lwx396:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-wiike2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-1iyr9vx {
  color: #b2b6c3;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-53uyah {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-53uyah.cache-53uyah {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-1n14rwx"
    disabled=""
  >
    <button
      aria-disabled="true"
      aria-label="Minus"
      class="etyrq8m4 e1kgqxfn0 cache-unoz5r"
      disabled=""
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-1xhqomg"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-lwx396 etyrq8m3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-wiike2 etyrq8m2"
        disabled=""
        name="stepper"
        style="width: 35px;"
        value="10"
      />
      <span
        class="cache-1iyr9vx etyrq8m1"
      >
        unit
      </span>
    </div>
    <button
      aria-disabled="true"
      aria-label="Plus"
      class="etyrq8m4 e1kgqxfn0 cache-unoz5r"
      disabled=""
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-53uyah"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should renders large size 1`] = `
<DocumentFragment>
  .cache-hlwi41 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1giljfj {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1giljfj[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1giljfj[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1giljfj>.etyrq8m5 {
  fill: #4f0599;
}

.cache-1giljfj:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-1xhqomg {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-1xhqomg.cache-1xhqomg {
  vertical-align: middle;
}

.cache-lwx396 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-lwx396:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-lwx396:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-wiike2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-53uyah {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-53uyah.cache-53uyah {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-hlwi41"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m4 e1kgqxfn0 cache-1giljfj"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-1xhqomg"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-lwx396 etyrq8m3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-wiike2 etyrq8m2"
        name="stepper"
        style="width: 35px;"
        value="10"
      />
    </div>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m4 e1kgqxfn0 cache-1giljfj"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-53uyah"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should renders small size 1`] = `
<DocumentFragment>
  .cache-ioxeyl {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 32px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
}

.cache-1wmir05 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 22px;
  margin: 0 4px;
}

.cache-1wmir05[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1wmir05[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1wmir05>.etyrq8m5 {
  fill: #4f0599;
}

.cache-1wmir05:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-bd452q {
  fill: #dce1eb;
  height: 22px;
  width: 22px;
  min-width: 22px;
  min-height: 22px;
}

.cache-bd452q.cache-bd452q {
  vertical-align: middle;
}

.cache-1un8x9b {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 64px);
}

.cache-1un8x9b:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-1un8x9b:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-wiike2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-1tdmi3b {
  fill: currentColor;
  height: 22px;
  width: 22px;
  min-width: 22px;
  min-height: 22px;
}

.cache-1tdmi3b.cache-1tdmi3b {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-ioxeyl"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m4 e1kgqxfn0 cache-1wmir05"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-bd452q"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <div
      aria-live="assertive"
      class="cache-1un8x9b etyrq8m3"
      role="status"
    >
      <input
        aria-label="Input"
        class="cache-wiike2 etyrq8m2"
        name="stepper"
        style="width: 35px;"
        value="10"
      />
    </div>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m4 e1kgqxfn0 cache-1wmir05"
      type="button"
    >
      <svg
        class="etyrq8m5 etwatq50 cache-1tdmi3b"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
